# ESP32-S3-JC8048W550-LVGL-ESPIDF-EEZ

./: 5hmi.eez-project  README.md  parts.csv
main/: CMakeLists.txt  idf_component.yml  main.cpp  sunton_esp32_8048s050c.c  sunton_esp32_8048s050c.h
main/eez-framework/src/eez/core/: value.h
main/eez-framework/src/eez/flow/: flow.cpp  flow.h  operations.cpp
main/eez-framework/src/eez/gui/: display.cpp  gui.cpp  gui.h
main/ui/: actions.h  eez-flow.cpp  eez-flow.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
main/ui/fonts/: ui_font_fnt.c  ui_font_label50.c  ui_font_menu_label.c  ui_font_seven_segment50.c  ui_font_ss100.c  ui_font_ss40.c  ui_font_ss65.c
main/ui/images/: ui_image__cfbvcvb.c  ui_image_home_3_48.c  ui_image_menu_off.c  ui_image_menu_on.c  ui_image_power_48.c  ui_image_pp.c  ui_image_settings.c  ui_image_uftd.c
